@@ -1,44 +1,50 @@
 \name{rgl.material}
 \alias{rgl.material}
-\alias{rgl.getcolorcount}
-\alias{rgl.getmaterial}
 \alias{material3d}
 \title{generic Appearance setup}
 \description{
   Set material properties for geometry appearance.
 }
 \usage{
-
-rgl.material( color, alpha, lit, ambient, specular, emission,
-  shininess, smooth, texture, textype, texmipmap, texminfilter,
-  texmagfilter, texenvmap, front, back, size, fog )
-
-material3d( color, alpha, lit, ambient, specular, emission,
-  shininess, smooth, texture, textype, texmipmap, texminfilter,
-  texmagfilter, texenvmap, front, back, size, fog )
-
-rgl.getcolorcount()
-rgl.getmaterial(ncolors = rgl.getcolorcount())
+rgl.material(
+  color        = c("white"),
+  alpha        = c(1.0),
+  lit          = TRUE, 
+  ambient      = "black",
+  specular     = "white", 
+  emission     = "black", 
+  shininess    = 50.0, 
+  smooth       = TRUE,
+  texture      = NULL, 
+  textype      = "rgb", 
+  texmipmap    = FALSE, 
+  texminfilter = "linear", 
+  texmagfilter = "linear",
+  texenvmap    = FALSE,
+  front        = "fill", 
+  back         = "fill",
+  size         = 1.0, 
+  fog          = TRUE
+)
+material3d(...)
 }
 \arguments{
   \item{color}{
-    vector of R color characters, default \code{"white"}. Represents the diffuse component in case of lighting calculation (lit = TRUE),
-    otherwise it describes the solid color characteristics.  Alternatively, a list of
-    parameters; see Details below.
+    vector of R color characters. Represents the diffuse component in case of lighting calculation (lit = TRUE),
+    otherwise it describes the solid color characteristics.
   }
   \item{lit}{
-    logical, default \code{TRUE}, specifying if lighting calculation should take place on geometry
+    logical, specifying if lighting calculation should take place on geometry
   }
   \item{ambient, specular, emission, shininess}{
-    properties for lighting calculation, default \code{"black", "white", "black", 50.0}. 
-    ambient, specular, emission are R color character string values; shininess represents a
+    properties for lighting calculation. ambient, specular, emission are R color character string values; shininess represents a
     numerical.
   }
   \item{alpha}{ 
-    vector of alpha values between 0.0 (fully transparent) .. 1.0 (opaque), default 1.0.
+    vector of alpha values between 0.0 (fully transparent) .. 1.0 (opaque).
   }
   \item{smooth}{
-    logical, specifying whether gouraud shading (smooth, the default) or flat shading should be used.
+    logical, specifying whether gourad shading (smooth) or flat shading should be used.
   }
   \item{texture}{ 
     path to a texture image file. Supported formats: png.
@@ -49,7 +55,7 @@ rgl.getmaterial(ncolors = rgl.getcolorcount())
       \item{"alpha"}{alpha values}
       \item{"luminance"}{luminance}
       \item{"luminance.alpha"}{luminance and alpha}
-      \item{"rgb"}{(default) color}
+      \item{"rgb"}{color}
       \item{"rgba"}{color and alpha texture}
     }
   }
@@ -60,14 +66,14 @@ rgl.getmaterial(ncolors = rgl.getcolorcount())
     specifies the magnification filtering type (sorted by ascending quality):
     \describe{
       \item{"nearest"}{texel nearest to the center of the pixel}
-      \item{"linear"}{(default) weighted linear average of a 2x2 array of texels}
+      \item{"linear"}{weighted linear average of a 2x2 array of texels}
     }
   }
   \item{texminfilter}{
     specifies the minification filtering type (sorted by ascending quality):
     \describe{
       \item{"nearest"}{texel nearest to the center of the pixel}
-      \item{"linear"}{(default) weighted linear average of a 2x2 array of texels}
+      \item{"linear"}{weighted linear average of a 2x2 array of texels}
       \item{"nearest.mipmap.nearest"}{low quality mipmapping}
       \item{"nearest.mipmap.linear"}{medium quality mipmapping}
       \item{"linear.mipmap.nearest"}{medium quality mipmapping}
@@ -75,40 +81,32 @@ rgl.getmaterial(ncolors = rgl.getcolorcount())
     }
   }
   \item{texenvmap}{
-    logical, default \code{FALSE}, specifies if auto-generated texture coordinates for environment-mapping 
+    logical, specifies if auto-generated texture coordinates for environment-mapping 
     should be performed on geometry.
   }
   \item{front, back}{
     Determines the polygon mode for the specified side:
     \describe{
-      \item{"fill"}{(default) filled polygon}
+      \item{"fill"}{filled polygon}
       \item{"line"}{wireframed polygon}
       \item{"points"}{point polygon}
       \item{"cull"}{culled (hidden) polygon}
     }
   }
   \item{size}{ 
-    numeric, default 1.0, specifying the line and point size.
+    numeric, specifying the line and point size.
   }
-  \item{fog}{logical, default \code{TRUE}, specifying if fog effect should be applied on the corresponding shape}
-  \item{ncolors}{integer specifying how many colors and alpha values are requested to be returned}
+  \item{fog}{logical, specifying if fog effect should be applied on the corresponding shape}
+  \item{...}{Any of the arguments above; see Details below.}
 }
 \details{
   Only one side at a time can be culled.
   
-  \code{material3d} is a synonym for \code{rgl.material}.
-  
-  If \code{color} (the first) argument is a list, it is treated as a list of parameters in
-  a call to \code{rgl.material}.
-  
-  
-}
-\value{
-  \code{rgl.material} is called for the side effect of setting the current material.
-  
-  \code{rgl.getcolorcount} returns the number of colors defined in the current material.
-  
-  \code{rgl.getmaterial} returns a list of parameters defining the current material.
+  \code{material3d} is an alternate interface to the material properties, modelled after
+\code{\link{par3d}}:  rather than setting defaults for parameters that are not specified, 
+they will be left unchanged.  \code{material3d} may also be used to query the material
+properties; see the examples below.
+
   The current implementation does not return parameters for textures.
 }
 \seealso{
@@ -117,7 +115,11 @@ rgl.getmaterial(ncolors = rgl.getcolorcount())
 \code{\link{rgl.bg}},
 \code{\link{rgl.light}}
 }
+\example{
+save <- material3d("color")
+material3d(color="red")
+material3d("color")
+material3d(color=save)
+}
 \keyword{dynamic}
-
-
 
